# template-python

./: .gitignore  README.md  pyproject.toml
notebook/: main.py
src/template/: main.py
tests/: test_bench_main.py  test_main.py
